@startuml

class NodeEditor{
    List<Node> nodes
}
NodeEditor "*" *-- "1" Node

class Node{
    List<NodeField> inputs
    List<NodeField> outputs
}
Node "*" *-- "1" NodeField

enum NodeFieldType{
    input
    output
}

class NodeField{
    NodeFieldType nodeFieldType
    Connection connection
    void connectTo()
}
NodeField --> NodeFieldType
NodeField "0-1" *-- "1-2" Connection

class Connection{
    NodeField inputs
    NodeField outputs
}

Connection "0-2" *-- "0-1" NodeField

class Offset{
}

@enduml